--- a/claw-frontend/package.json
+++ b/claw-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.6.0",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
