--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ debug/
 target/
 .idea/
 main/node_modules
-claw-frontend/node_modules/**
+node_modules/**
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
